# opencv4csg

./: CMakeLists.txt  README.md
python/: 0201.py  0207.py  0210.py  0211.py  0213.py  0214.py  0215.py  0311.py  0312.py  0401.py  0402.py  0406.py  0407.py  0408.py  0409.py  0410.py  0411.py  0412.py  0416-1.py  0416-2.py  0416.py  0503.py  0504.py  0505.py  0512.py  0513.py  0516.py  0517.py  0601.py  0602.py  0603.py  0604.py  0605.py  0606.py  0607.py  0608.py  0609.py  0611.py  0701.py  0702.py  (+35 more)
study1/: main.cpp
study2/matOp/: main.cpp
study3/: practice.cpp
study4/: line.cpp
test/: test.cpp
